common-applications/test-environment/merlin-02/networkpolicy.yaml
kind: NetworkPolicy
metadata:
  name: merlin-docs-sh-policy-01
  namespace: merlin-02
spec:
  podSelector:
    matchLabels:
      app: merlin-docs
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
      from:
        - podSelector:
            matchLabels:
              app: merlin-website
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1

---
kind: NetworkPolicy
metadata:
  name: merlin-website-sh-policy-01
  namespace: merlin-02
spec:
  podSelector:
    matchLabels:
      app: merlin-website
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
      from:
        - podSelector:
            matchLabels:
              app: merlin-website
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1

---
kind: NetworkPolicy
metadata:
  name: merlin-hook-sh-policy-01
  namespace: merlin-02
spec:
  podSelector:
    matchLabels:
      app: hook-delivery
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
      from:
        - podSelector:
            matchLabels:
              app: merlin-website
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1

---
kind: NetworkPolicy
metadata:
  name: merlin-hook-sh-policy-02
  namespace: merlin-02
spec:
  podSelector:
    matchLabels:
      app: hook-delivery
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
      from:
        - podSelector:
            matchLabels:
              app: gitea-repo-sh
          namespaceSelector:
            matchLabels:
              project: gitea-repo-sh
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1

---
kind: NetworkPolicy
metadata:
  name: merlin-label-sh-policy-01
  namespace: merlin-02
spec:
  podSelector:
    matchLabels:
      app: label
  ingress:
    - ports:
        - protocol: TCP
      from:
        - podSelector:
            matchLabels:
              app: label
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1

---
kind: NetworkPolicy
metadata:
  name: merlin-access-sh-policy-01
  namespace: merlin-02
spec:
  podSelector:
    matchLabels:
      app: git-access
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
      from:
        - podSelector:
            matchLabels:
              app: merlin-website
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1

---
kind: NetworkPolicy
metadata:
  name: merlin-server-sh-policy-01
  namespace: merlin-02
spec:
  podSelector:
    matchLabels:
      app: server
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
      from:
        - podSelector:
            matchLabels:
              app: merlin-website
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1

---
kind: NetworkPolicy
metadata:
  name: merlin-server-sh-policy-02
  namespace: merlin-02
spec:
  podSelector:
    matchLabels:
      app: server
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
      from:
        - podSelector:
            matchLabels:
              app: label
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1

---
kind: NetworkPolicy
metadata:
  name: merlin-server-sh-policy-03
  namespace: merlin-02
spec:
  podSelector:
    matchLabels:
      app: server
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
      from:
        - podSelector:
            matchLabels:
              app: space
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1

---
kind: NetworkPolicy
metadata:
  name: merlin-server-sh-policy-04
  namespace: merlin-02
spec:
  podSelector:
    matchLabels:
      app: server
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
      from:
        - podSelector:
            matchLabels:
              app: git-access
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1

---
kind: NetworkPolicy
metadata:
  name: merlin-space-sh-policy-02
  namespace: merlin-02
spec:
  podSelector:
    matchLabels:
      app: space
  ingress:
    - ports:
        - protocol: TCP
          port: 8123
      from:
        - podSelector:
            matchLabels:
              app: server
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1

---
kind: NetworkPolicy
metadata:
  name: merlin-access-sh-policy-02
  namespace: merlin-02
spec:
  podSelector:
    matchLabels:
      app: git-access
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
      from:
        - podSelector:
            matchLabels:
              app: label
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1

---
kind: NetworkPolicy
metadata:
  name: merlin-access-sh-policy-03
  namespace: merlin-02
spec:
  podSelector:
    matchLabels:
      app: git-access
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
      from:
        - podSelector:
            matchLabels:
              app: clam-go
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1
